--- a/heatmap_brazilian_ecommerce.ipynb
+++ b/heatmap_brazilian_ecommerce.ipynb
@@ -7,8 +7,8 @@
     "id": "8PWRW-iovft7"
    },
    "source": [
-    "Mapa de calor para mostrar em quais regiões ocorrem o maior fluxo de compras.\n",
-    "Quais as regiões em que os usuários possuem maior satisfação."
+    "# Heat Map on Brazilian E-Commerce\n",
+    "This heatmap shows which location there were more products being sold out."
    ]
   },
   {
@@ -669,11 +669,17 @@
     "# creating a data visualization\n",
     "import matplotlib.pyplot as plt\n",
     "fig, axis = plt.subplots(figsize=(20,10))\n",
+    "# creating a bar graph type with the index and state\n",
     "plt.bar(estados_v_c['index'], estados_v_c['state'], color=\"#00897B\")\n",
+    "# putting name\n",
     "plt.title(\"Distribuição de Compras Online por Estado\", fontsize=20)\n",
+    "# customizing x ticks\n",
     "plt.xticks( fontsize=13,rotation=30)\n",
+    "# name of the x \n",
     "plt.xlabel(\"Estado\", fontsize=15)\n",
+    "# name of the y\n",
     "plt.ylabel(\"Quantidade\", fontsize=15)\n",
+    "# saving the graph on a picture\n",
     "plt.savefig(\"distribuicao.png\")\n",
     "plt.show()\n"
    ]
